# bad_hangman

./: Accuracy.cpp  Application.cpp  Application.h  CMakeLists.txt  Gallows.cpp  Gallows.h  Hangman.cpp  Hangman.h  Logic.cpp  Logic.h  Player.cpp  Player.h  ResourceHolder.cpp  ResourceHolder.h  States.cpp  States.h  Tests.cpp  UserInput.cpp  UserInput.h  Visuals.cpp  Visuals.h  Word.cpp  Wordbank.cpp  Wordbank.h  main.cpp  words.txt
